--- a/package.json
+++ b/package.json
@@ -10,30 +10,37 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/react": "^2.2.2",
-    "@astrojs/rss": "^2.4.4",
-    "@astrojs/sitemap": "^2.0.2",
-    "@astrojs/tailwind": "^4.0.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "astro": "^2.10.8",
+    "@astrojs/mdx": "^2.0.2",
+    "@astrojs/react": "^3.0.8",
+    "@astrojs/rss": "^4.0.1",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.4",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "^8.12.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/three": "^0.160.0",
+    "astro": "^4.0.7",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "shadergradient": "^1.2.5",
+    "tailwindcss": "^3.4.0",
+    "three": "^0.150.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "lint-staged": "^14.0.0",
-    "prettier": "^3.0.2",
-    "prettier-plugin-astro": "^0.11.1",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.2",
     "simple-git-hooks": "^2.9.0"
   },
   "packageManager": "pnpm@8.6.12",
   "prettier": {
     "semi": false,
-    "singleQuote": true,
+    "printWidth": 100,
     "bracketSpacing": true
   },
   "commitlint": {
