--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "lint-staged": "^15.2.0",
+    "open-props": "^1.7.0",
+    "postcss-nesting": "^12.1.1",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.2",
     "simple-git-hooks": "^2.9.0"
